# Pluto_AATRV

./: .gitignore  2025-09-27-13-19-56.bag  CMakeLists.txt  README.md  launch_controller.sh  package.xml  polygon_functionality.ipynb
action/: PlanGlobalPath.action  PlutoGoal.action
archive/btree/: base.py
archive/hdmap/: analysis.ipynb  contours_cv.ipynb
archive/milestone1/: local_planner.py  navigatecombine.py
archive/rosbag/: gps_test_outdoor_rpl_20250303.bag
archive/test_pluto/: env_runner.sh
archived/: LIDAR_Prep
archived/control/: PYTHON_CPP_DIFFERENCES.md  control_test_algo.py  live_plot.py  publishers_odom.py
btree/: base.py
config/: preview_controller_config.yaml
control/: CMakeLists.txt  package.xml
control/action/: PlanGlobalPath.action
control/archived/: final_control_algo sub.cpp
control/config/: preview_controller_config.yaml
control/launch/: global_planner.launch  simulation_cpp.launch  simulation_python.launch  simulation_python_test.launch  test1.launch  test_controller.launch  test_controller1.launch  test_controller_bt.launch
control/rviz/: simulation.rviz
control/scripts/: behavior_tree_m2.py  behavior_tree_m3.py  control_algo.py  control_test_algo.py  dwa_with_control_vis.py  live_plot.py  odom_to_base_linktf.py  planner_action_servers.py  planner_test_action_client.py  publishers1.py  publishers2.py  robot_pose_to_base_linktf.py  robot_simulator.py  rsequence.py
control/scripts/test_scripts/: dwa_test_sim.py  global_planner_test.py  send_goal2.py  test_global_planner.py
control/scripts/utils/: global_planner.py  gmap_utility.py  local_planner.py  test_global_planner.py
control/src/: bt_controller_node.cpp  control_service_server.cpp  final_control_algo.cpp  final_control_algo.h  final_control_algo_sub.h  preview_test_alone.cpp
control/srv/: RunControl.srv
detector/: CMakeLists.txt  package.xml
detector/src/: detector.launch  detector.py  rviz.rviz
docs/: WIKI.md
hdmap/: Untitled.ipynb  contours.ipynb  contours_alphashape.ipynb  divide.ipynb  local_planner.py  obstacles_rad.py  polygon_functionality.ipynb
launch/: bags.launch  controller.launch  detector_param.yaml  milestone1.launch  perception_sensors.sh  publishers_launch.launch  test_controller.launch  test_pluto.launch
localisation_src/: test_localisation.sh
localisation_src/ndt_localizer/: CMakeLists.txt  package.xml
localisation_src/ndt_localizer/cfgs/: rock-auto.rviz
localisation_src/ndt_localizer/include/: ndt.h
localisation_src/ndt_localizer/launch/: localisation.launch  map_loader.launch  ndt_localizer.launch  points_downsample.launch  static_tf.launch
localisation_src/ndt_localizer/nodes/: ndt.cpp
localisation_src/odom_plotter/: CMakeLists.txt  package.xml
milestone1/: base.py  control.py  local_planner.py  obstacles.py  publishers.py  robot_pose_publisher.py  visualize_rrt.py
milestone1/boundaries/: milestone1_vertices.ply  obst_Vertices_4.ply
milestone2_gmap_dataset/: final_boundary_comb.ply  obst_Vertices_3.ply  obst_Vertices_5.ply  obst_Vertices_6.ply  obst_Vertices_7_pots.ply  obst_Vertices_left_near_bound.ply  obst_bollard.ply  obst_corner_lamppost.ply  obst_dustbin.ply  obst_lamppost2.ply  obst_left_sideboard.ply  obst_rect_stairs.ply
perception/: Untitled.ipynb
rosbag/: gps_test_outdoor_rpl_20250212.bag
scripts/: atrvvelcontrol.cc  base.py  base1.py  behavior_tree.py  control.py  dwa.py  dwa_quick_test_obst_cost.py  final_control_algo.cpp  final_control_algo.h  global_planner.py  gmap_utility.py  gps_dash.py  gps_server.py  live_plot.py  local_TEB_plan.py  local_planner.py  merge_bags.py  multi_goal_base.py  navigatecombine.py  navigatecombine1.py  navigatecombine2.py  navigatecombine3.py  navigatecombine5.py  navigatecombine_sim.py  pid_control.py  planner_action_servers.py  pluto_goal_action_server.py  pose_offset_pub.py  preview_control_ros.py  preview_test_alone.cpp  preview_testpath.py  publishers.py  publishers1.py  publishers_dynamic_sim.py  publishers_static.py  save_bags.py  save_bags_color.py  save_pointclouds.py  send_goal.py  send_goal1.py  (+6 more)
scripts/boundaries/: obst_Vertices_1.ply  obst_Vertices_2.ply  obst_Vertices_8_pots.ply  obst_Vertices_front_near_bound.ply
scripts/dwa_sim_test/: dwa.py  dwa_quick_test_obst_cost.py
scripts/utils/: global_planner.py  gmap_utility.py  test_global_planner.py
src/: final_control_algo.cpp  final_control_algo.h  preview_test_alone.cpp
test_pluto/: CMakeLists.txt  package.xml
test_pluto/launch/: test_pluto.launch
(+55 files in other folders)
